syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package ds_version;

message DsVersion {

   int32  id=1 ;
   string  version=2 ;
}

// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsVersionService {
  rpc ListDsVersions(ListDsVersionsRequest) returns (ListDsVersionsResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsVersions"
    };
  }

  rpc GetDsVersion(GetDsVersionRequest) returns (DsVersion) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsVersions/*}"
    };
  }

  rpc CreateDsVersion(CreateDsVersionRequest) returns (DsVersion) {
    option (google.api.http) = {
      post: "/v1alpha1/DsVersions"
      body: "DsVersion"
    };
  }

  rpc UpdateDsVersion(UpdateDsVersionRequest) returns (DsVersion) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsVersion.name=DsVersions/*}"
      body: "DsVersion"
    };
  }

  rpc DeleteDsVersion(DeleteDsVersionRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsVersions/*}"
    };
  }
}

// message DsVersion {
// ! This should be defined elsewhere
// }

message ListDsVersionsRequest {


  // The maximum number of items to return.
  int32 page_size = 1;

 int32 page_num = 2;
}

message ListDsVersionsResponse {
  // The field name should match the noun "DsVersion" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsVersion DsVersions = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsVersionRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsVersionRequest {
  // The parent resource name where the DsVersion is to be created.
  string parent = 1;

  // The DsVersion id to use for this DsVersion.
  string DsVersion_id = 2;

  // The DsVersion resource to create.
  // The field name should match the Noun in the method name.
  DsVersion DsVersion = 3;
}

message UpdateDsVersionRequest {
  // The DsVersion resource which replaces the resource on the server.
  DsVersion DsVersion = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsVersionRequest {
  // The resource name of the DsVersion to be deleted.
  string name = 1;
}
